Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93035

Adding a disable entity to the scene and enabling it later isn't properly picked up

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.15
    • 5.15
    • Qt3D
    • None

      If you create an entity and setEnabled(false) on it at the time it is added to the scene tree.

      Later on, when setEnabled becomes true, the entity is not properly picked up by the Qt 3D backend unless other scenes changes (e.g components added/removed) are made at the same time. 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lemire_p Paul Lemire
            lemire_p Paul Lemire
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes