Rerun bounding volume update jobs when entity enabled property changes

Otherwise, this results in the bounding volume being out of sync with
entities (an entity initially disabled that gets enabled would have an
empty bounding volume) until some other events in the scene triggers a
rebuild.

Task-number: QTBUG-93035
Change-Id: Ia21eec0eb5601169e1789321080803a5aed12e82
Reviewed-by: Mike Krus <mike.krus@kdab.com>
(cherry picked from commit d29f3b277d0f949f2fa0b0e0214e38ec3e790c40)
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>